# Group_9_GA_Metrics

./: .readthedocs.yml  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  example_find_campaign.ipynb  make.bat
src/dscigametrics/: compute_metrics.py  compute_metrics_temp.py  daily_plot.py  find_best_and_worst_campaigns.py  find_campaigns.py  metric1.py  metric2.py  metric3.py  metric4.py  module_built.ipynb  stat_summary.py  toy_data.ipynb
tests/: ga_metrics_test_data.csv  test_compute_metrics.py  test_daily_plot.py  test_dscigametrics.py  test_find_campaigns.py  test_stat_summary.py  test_statsummary.py  toy_data_test.csv
tests/data/: toy_data_nest.json  toy_data_unnest.json
