[tool.poetry]
name = "dscigametrics"
version = "0.1.0"
description = "Computing Google Analytics Metrics!"
authors = ["DSCI524 Cohort8 Group9"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = ">=2.1.4"
numpy = ">=1.26.3"
altair = ">=5.2.0"
pytest = ">=7.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"